--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "date-fns": "^2.30.0",
     "history": "^5.3.0",
     "lodash": "^4.17.21",
+    "mui-one-time-password-input": "^2.0.2",
     "numeral": "^2.0.6",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -39,6 +40,7 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.47.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.16.0",
     "react-toastify": "^10.0.5",
     "simplebar-react": "^3.2.4",
@@ -58,6 +60,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-unused-imports": "^3.0.0",
     "prettier": "^3.0.3",
+    "tailwindcss": "^3.4.3",
     "vite": "^4.4.11",
     "vite-plugin-checker": "^0.6.2"
   }
