--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@Infostide/material-kit-react",
-  "author": "Infostides.cc",
+  "name": "sushil",
+  "author": "sushil.cc",
   "licence": "MIT",
   "version": "1.8.0",
   "private": false,
@@ -27,9 +27,6 @@
     "@iconify/react": "^4.1.1",
     "@mui/lab": "^5.0.0-alpha.147",
     "@mui/material": "^5.14.12",
-    "@react-page/editor": "^5.4.4",
-    "@react-page/plugins-image": "^5.4.4",
-    "@react-page/plugins-slate": "^5.4.4",
     "apexcharts": "^3.43.0",
     "axios": "^1.6.8",
     "date-fns": "^2.30.0",
@@ -40,6 +37,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
@@ -47,8 +45,10 @@
     "react-hook-form": "^7.47.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.16.0",
+    "react-tabs": "^6.0.2",
     "react-toastify": "^10.0.5",
     "simplebar-react": "^3.2.4",
+    "smooth-dnd": "^0.12.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
