--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,8 @@
     "apexcharts": "^3.43.0",
     "axios": "^1.6.8",
     "classnames": "^2.5.1",
+    "cloudinary-core": "^2.13.1",
+    "crypto": "^1.0.1",
     "date-fns": "^2.30.0",
     "history": "^5.3.0",
     "lodash": "^4.17.21",
