--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,7 +52,8 @@
     "react-router-dom": "^6.16.0",
     "react-tabs": "^6.0.2",
     "react-toastify": "^10.0.5",
-    "simplebar-react": "^3.2.4",
+    "simplebar": "^6.2.7",
+    "simplebar-react": "^3.2.6",
     "smooth-dnd": "^0.12.1",
     "zod": "^3.22.4"
   },
